Fixed footer weird issue on iOS 14

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -8,5 +8,8 @@
     color: var(--text-color);
     .container {
         height: calc(100% - 50px);
+        .collapse {
+            width: 90vw;
+        }
     }
 }
